source/metacall/include/metacall/metacall.h

/**
*  @brief
*    Get the function by @name
*
*  @param[in] name
*    Name of the function
*
*  @return
*    Function reference, null if the function does not exist
*/
METACALL_API void *metacall_function(const char *name);
/**
*  @brief
*    Get the function parameter type id
*
*  @param[in] func
*    The pointer to the function obtained from metacall_function
*
*  @param[in] parameter
*    The index of the parameter to be retrieved
*
*  @param[out] id
*    The parameter type id that will be returned
*
*  @return
*    Return 0 if the @parameter index exists and @func is valid, 1 otherwise
*/
METACALL_API int metacall_function_parameter_type(void *func, size_t parameter, enum metacall_value_id *id);
/**
*  @brief
*    Get the function return type id
*
*  @param[in] func
*    The pointer to the function obtained from metacall_function
*
*
*  @param[out] id
*    The value id of the return type of the function @func
*
*  @return
*    Return 0 if the @func is valid, 1 otherwise
*/
METACALL_API int metacall_function_return_type(void *func, enum metacall_value_id *id);
/**
*  @brief
*    Get minimum number of arguments accepted by function @func
*
*  @param[in] func
*    Function reference
*
*  @return
*    Return number of arguments
*/
METACALL_API size_t metacall_function_size(void *func);
/**
*  @brief
*    Check if the function @func is asynchronous or synchronous
*
*  @param[in] func
*    Function reference
*
*  @return
*    Return 0 if it is synchronous, 1 if it is asynchronous and -1 if the function is NULL
*/
METACALL_API int metacall_function_async(void *func);